removed horizontal scrollbar in adventures, and added min-height to prevent hopping

--- a/static/css/additional.css
+++ b/static/css/additional.css
@@ -17,5 +17,5 @@
 
 .bg-white.p-4.mb-8.shadow-md.turn-pre-into-ace {
   max-height: 20em;
-  overflow: scroll;
+  overflow: auto;
 }
